* review 16/CA: reject; bad function name for escapestring, add TODO's.
CMakeLists.txt: clock is no longer a long test.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -80,7 +80,7 @@ ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 ################################### LONGER TESTS
 
 IF(ENABLE_CLOCK_TEST)
-    LINTEL_SIMPLE_LONG_TEST(clock clock-long)
+    LINTEL_SIMPLE_TEST(clock)
 ENDIF(ENABLE_CLOCK_TEST)
 
 ADD_TEST(flock-long ${CMAKE_CURRENT_SOURCE_DIR}/flock.sh ${CMAKE_CURRENT_SOURCE_DIR}/.. ${CMAKE_CURRENT_BINARY_DIR}/.. ${CMAKE_INSTALL_PREFIX})
