Fixed bug in mercury-plot

--- a/src/mercury-plot.in
+++ b/src/mercury-plot.in
@@ -818,7 +818,7 @@ sub readinput {
 	    print "\n";
 	    last;
 	}
-	last if defined $timeout ++$count >= $timeout*100;
+	last if (defined($timeout) && $count++ >= $timeout*100);
 	select(undef, undef, undef, 0.01);
     }
 }
