* Add regression test for mercury-plot.sh; fix bug in it.    * Change the way we search for perl modules to be consistent with      the other macros, and to be correct.
mercury-plot.sh: new test program, just verifies compilation.

CMakeConfig.txt: mercury now needs IO::Pty module, add it to the
  list of things, and print out a better message to show what we
  couldn't find.  use the IF(0) hack to reduce the need for changing
  the else and endif conditions.

LintelFind.cmake: consistently use ON for the "true" value throughout.
  Make variable name come first in the perl macros like all the other
  ones.  Fix code to properly do IF(VAR) not IF(${VAR}) since the former
  actually checks for whether the variable is true.

mercury-plot.in: add TODO to make us work without IO::Pty, and fix
  typo in merge preventing compilation.

tests/CMakeLists.txt: if mercury is enabled, test it.

tests/hashmap.cpp: [BUGFIX] a previous check that we don't incorrectly
  account for non-existent removes was wrong -- there was a small
  chance that we would try to remove something that actually existed.
  Check that it doesn't before the removal.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -77,6 +77,10 @@ IF(BOOST_PROGRAM_OPTIONS_ENABLED)
     ADD_TEST(program_options ${CMAKE_CURRENT_SOURCE_DIR}/run-check-program-options.sh ${CMAKE_CURRENT_SOURCE_DIR})
 ENDIF(BOOST_PROGRAM_OPTIONS_ENABLED)
 
+IF(MERCURY_PLOT_ENABLED)
+    ADD_TEST(mercury-plot ${CMAKE_CURRENT_SOURCE_DIR}/mercury-plot.sh)
+ENDIF(MERCURY_PLOT_ENABLED)
+
 ################################### LONGER TESTS
 
 IF(ENABLE_CLOCK_TEST)
