* Add in ByteBuffer class.  This is a class that is intended to be a      partial replacement for strings that can be efficiently initialized.
ByteBuffer.hpp: class implementation

byte_buffer.cpp: test for ByteBuffer

include/Lintel/CMakeLists.txt: add ByteBuffer.hpp header

src/tests/CMakeLists.txt: add byte_buffer test.

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -38,6 +38,7 @@ LINTEL_SIMPLE_TEST(tuples)
 LINTEL_SIMPLE_TEST(hashtuplestats)
 LINTEL_SIMPLE_TEST(statscube)
 LINTEL_SIMPLE_TEST(priority_queue)
+LINTEL_SIMPLE_TEST(byte_buffer)
 
 ################################## SPECIAL TEST PROGRAMS
 
