--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -167,6 +167,7 @@ IF(PERL_ENABLED)
     LINTEL_INSTALL_CONFIG_PROGRAM(batch-parallel)
     LINTEL_INSTALL_CONFIG_PROGRAM(deptool)
     LINTEL_INSTALL_CONFIG_PROGRAM(lintel-flock)
+    LINTEL_INSTALL_CONFIG_PROGRAM(disk-prepare)
 ENDIF(PERL_ENABLED) 
 
 IF(MERCURY_PLOT_ENABLED)
