lintel-latex-rebuild.in: print entire rebuild log when rebuild fails; error is sometimes not in the last 50 lintes.

--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -176,7 +176,7 @@ if [ "$any_err" = "" ]; then
     exit 0
 else 
     echo "--------- ERROR in $TEXFILE -----------"
-    tail -50 $TEXFILE.rebuild.out
+    cat $TEXFILE.rebuild.out
     echo "--------- ERROR in $TEXFILE -----------"
     echo "Full log file is $TEXFILE.rebuild.out"
     echo "$any_err failed, removing $TEXFILE.{dvi,ps,pdf} files"
