* Add in all the references that we've collected into a single      place to reduce the number of copies we seem to end up with in      all the paper/tr directories.    * Automatically build a lintel-latex-all.bib file to simplify      reference lists.    * Eliminate cmake warnings
doc/references/CMakeLists.txt: cmakefile to build lintel-latex-all.bib
  and install.

README: description of our current recommendations on citation format
  and such.

doc/CMakeLists.txt: add new subdir

src/CMakeLists.txt: set cmake policies as appropriate to eliminate
  warnings

lintel-latex-rebuild.in: add in the installed lintel-latex files to
  include path.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -11,3 +11,5 @@ LINTEL_DOCS_BUILD()
 
 INSTALL(FILES doxygen.config.in 
         DESTINATION ${CMAKE_INSTALL_PREFIX}/share/Lintel)
+
+ADD_SUBDIRECTORY(references)
