- Copied AtomicCounter.hpp into Lintel for more general use

--- a/include/Lintel/CMakeLists.txt
+++ b/include/Lintel/CMakeLists.txt
@@ -86,7 +86,7 @@ IF(ENABLE_STDIO64)
 ENDIF(ENABLE_STDIO64)
 
 IF(THREADS_ENABLED)
-    LIST(APPEND INCLUDE_FILES ${CMAKE_CURRENT_BINARY_DIR}/PThread.hpp)
+    LIST(APPEND INCLUDE_FILES ${CMAKE_CURRENT_BINARY_DIR}/PThread.hpp AtomicCounter.hpp)
     LIST(APPEND TRANSITIONAL_INCLUDE_FILES PThread.H)
 ENDIF(THREADS_ENABLED)
   
