--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -67,6 +67,9 @@ ENDIF(LIBXML2_ENABLED)
 IF(THREADS_ENABLED)
     LINTEL_SIMPLE_TEST(pthread)
     TARGET_LINK_LIBRARIES(pthread LintelPThread)
+
+    LINTEL_SIMPLE_TEST(atomic_counter)
+    TARGET_LINK_LIBRARIES(atomic_counter LintelPThread)
 ENDIF(THREADS_ENABLED)
 
 IF(LATEX_ENABLED)
