lintel-latex-rebuild error-on-warnings option was masking actual errors if there was also a warning (or the error cause a warning). Now we only check if there were warnings if there were no errors.

--- a/src/lintel-latex-rebuild.in
+++ b/src/lintel-latex-rebuild.in
@@ -187,16 +187,19 @@ cleanup_abort() {
     exit 1
 }
 
-if $ERROR_ON_WARNINGS; then
-    WARNING_COUNT=`grep -i warning $TEXFILE.rebuild.out | wc -l`
-    if [ $WARNING_COUNT != 0 ]; then
-	show_warnings
-	echo "ERROR: Warnings are currently treated as errors"
-	cleanup_abort
+check_warnerror() {
+    if $ERROR_ON_WARNINGS; then
+	WARNING_COUNT=`grep -i warning $TEXFILE.rebuild.out | wc -l`
+	if [ $WARNING_COUNT != 0 ]; then
+	    show_warnings
+	    echo "ERROR: Warnings are currently treated as errors"
+	    cleanup_abort
+	fi
     fi
-fi
+}
 
 if [ "$any_err" = "" ]; then
+    check_warnerror
     show_warnings
     echo "Full log file is $TEXFILE.rebuild.out"
     echo "Successful latex rebuild." 
